# libzakconfi

./: .cproject  .gitignore  .project  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  libconfi.pc.in  libzakconfi.pc.in
data/: Makefile.am  confi.sql  schema_db.dia
debian/: changelog  control  copyright  libzakconfi.install
debian/patches/: 0001-DESTDIR-support.patch  0002-libpeas-old-version.patch  series
docs/reference/: Makefile.am  libconfi-docs.sgml  libconfi-sections.txt  libconfi-undocumented.txt  libconfi.types
docs/reference/tmpl/: libconfi-unused.sgml  libconfi.sgml
plugins/: Makefile.am
plugins/db/: Makefile.am  db.plugin  plgdb.c  plgdb.h
plugins/file/: Makefile.am  file.plugin  plgfile.c  plgfile.h
src/: Makefile.am  commons.c  commons.h  confi.c  confipluggable.c  confipluggable.h  libconfi.c  libconfi.h  libzakconfi.h
tests/: Makefile.am  conf.conf  gir.php  gir.py  test.c  test.sql  test_add_config.c  test_add_config_from_confi.c  test_get_configs_list.c  test_get_tree.c  test_set_config.c
tools/: Makefile.am  add_config_from_confi.c
